--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "parity-scale-codec"
 description = "SCALE - Simple Concatenating Aggregated Little Endians"
-version = "3.6.12"
+version = "3.6.8"
 authors = ["Parity Technologies <admin@parity.io>"]
 license = "Apache-2.0"
 repository = "https://github.com/paritytech/parity-scale-codec"
@@ -54,6 +54,9 @@ chain-error = []
 
 # This does not do anthing anymore. Remove with the next major release.
 full = []
+
+# Dump test vectors during testing
+dump-test-vectors = []
 
 [workspace]
 members = ["derive", "fuzzer"]
