More parity_scale_codec -> jam_codec

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Run Clippy
         run: |
           cargo +stable clippy --locked -- -Dwarnings
-          cargo +stable clippy --locked -p parity-scale-codec-derive -- -Dwarnings
+          cargo +stable clippy --locked -p jam-codec-derive -- -Dwarnings
           cargo +stable clippy --locked --test clippy -- -Dwarnings
 
   checks:
@@ -222,4 +222,4 @@ jobs:
 
       - name: Dry Run Publish
         if: github.event_name == 'pull_request'
-        run: cargo publish -p parity-scale-codec-derive --dry-run
+        run: cargo publish -p jam-codec-derive --dry-run
